--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,19 @@
             android:name=".Share"
             android:label="@string/title_activity_share" >
         </activity>
+        <!--<activity-->
+            <!--android:name=".Register"-->
+            <!--android:label="@string/title_activity_register" >-->
+        <!--</activity>-->
+        <activity
+            android:name=".register"
+            android:label="@string/title_activity_register" >
+        </activity>
 
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="caa08cb8500506feea8c2dbf2b7965a6704921a8" />
     </application>
 
+    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
