--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,5 @@ dependencies {
     compile('com.twitter.sdk.android:twitter:1.5.0@aar') {
         transitive = true;
     }
+    compile 'com.github.clans:fab:1.5.0'
 }
