--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -69,6 +69,10 @@
             android:name=".Infotwo"
             android:label="@string/title_activity_infotwo" >
         </activity>
+        <activity
+            android:name=".AddLocale"
+            android:label="@string/title_activity_add_locale" >
+        </activity>
     </application>
 
 </manifest>
