--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
     repositories {
         maven { url 'https://maven.fabric.io/public' }
+        maven { url "https://jitpack.io" }
     }
 
     dependencies {
@@ -12,6 +13,7 @@ apply plugin: 'io.fabric'
 
 repositories {
     maven { url 'https://maven.fabric.io/public' }
+    maven { url "https://jitpack.io" }
 }
 
 
@@ -48,4 +50,9 @@ dependencies {
     compile 'com.github.clans:fab:1.5.0'
     compile files('Parse-1.9.2.jar')
     compile 'com.parse.bolts:bolts-android:1.+'
+    compile fileTree(dir: 'libs', include: 'Parse-*.jar')
+    compile 'com.facebook.fresco:fresco:0.5.0+'
 }
+//dependencies {
+//    compile 'com.github.dexafree:MaterialList:v2.4.3'
+//}
