--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,9 +34,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    sourceSets{
-        main{
-            assets.srcDirs=['assets']
+    sourceSets {
+        main {
+            assets.srcDirs = ['assets', 'src/main/assets', 'src/main/assets/']
         }
     }
 }
