--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,9 @@ repositories {
     maven { url "https://jitpack.io" }
 }
 
+repositories{
+    mavenCentral()
+}
 
 android {
     compileSdkVersion 21
@@ -44,6 +47,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.1.1'
+    compile 'com.github.paolorotolo:appintro:3.2.0'
     compile('com.twitter.sdk.android:twitter:1.5.0@aar') {
         transitive = true;
     }
@@ -53,6 +57,3 @@ dependencies {
     compile fileTree(dir: 'libs', include: 'Parse-*.jar')
     compile 'com.facebook.fresco:fresco:0.5.0+'
 }
-//dependencies {
-//    compile 'com.github.dexafree:MaterialList:v2.4.3'
-//}
