--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.1.1'
     compile 'com.github.paolorotolo:appintro:3.2.0'
     compile('com.twitter.sdk.android:twitter:1.5.0@aar') {
@@ -54,6 +54,7 @@ dependencies {
     compile 'com.github.clans:fab:1.5.0'
     compile files('Parse-1.9.2.jar')
     compile 'com.parse.bolts:bolts-android:1.+'
-    compile fileTree(dir: 'libs', include: 'Parse-*.jar')
+    compile fileTree(include: 'Parse-*.jar', dir: 'libs')
     compile 'com.facebook.fresco:fresco:0.5.0+'
+    compile files('libs/Parse-1.4.1.jar')
 }
